Replace underscore placeholders in lambda expressions with identifiers for Java 21 compatibility.